src/test/compile-fail/bad-module.rs
// error-pattern: unresolved import: vec
import vec;

fn main() {
    auto foo = vec::len([]);
}